samples/_failures_safe/1761417231_b8b14f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8cc560a.c: In function ‘main’:
./samples/SAFE/__tmp_c8cc560a.c:152:5: error: expected ‘,’ or ‘;’ at end of input
  152 |     int freq_count = count_word_frequencies
      |     ^~~
./samples/SAFE/__tmp_c8cc560a.c:152:5: error: expected declaration or statement at end of input
